# dart

./: .gitignore  .travis.yml  CMakeLists.txt
apps/: CMakeLists.txt
apps/ballJointConstraintTest/: Main.cpp
apps/bioloid/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  ManualController.cpp  ManualController.h  Motion.cpp  Motion.h  MyWindow.cpp  MyWindow.h
apps/bioloidMotionOptimization/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  ManualController.cpp  ManualController.h  Motion.cpp  Motion.h  MotionOptimizer.cpp  MotionOptimizer.h  MyWindow.cpp  MyWindow.h
apps/collisionDetectors/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h
apps/cube/: Main.cpp  MyWindow.cpp  MyWindow.h
apps/cubli/: CMakeLists.txt  Controller.cpp  Main.cpp  MyWindow.cpp  MyWindow.h
apps/handManipulation/: BoundEllipsoidProblem.h_  CMakeLists.txt  ContactForceProblem.cpp_  ContactForceProblem.h  ControlTorqueProblem.cpp_  ControlTorqueProblem.h_  Controller.cpp  Controller.h  ForceAngleConstraint.cpp  ForceAngleConstraint.h_  ForceMagniConstraint.cpp_  ForcePlaneConstraint.cpp_  ForcePlaneConstraint.h  ForceProjConstraint.h_  ForceSpreadConstraint.h  ForceTorqueConstraint.cpp_  IKProblem.cpp_  IKProblem.h  InEllipsoidConstraint.cpp_  InEllipsoidConstraint.h_  LCPConstraint.cpp_  LCPConstraint.h_  LCPInvProblem.h_  Main.cpp  MaintainTask.cpp  MyWindow.cpp  MyWindow.h  OrientationConstraint.cpp_  PositionConstraint.cpp  Task.cpp  Task.h  TorqueMagniConstraint.h_  TorqueProjConstraint.h_  TrackEETask.cpp  TrackOriTask.cpp  TrackOriTask.h  TrackPoseTask.cpp  TrackPoseTask.h
apps/handObjectRolling/: CMakeLists.txt  Controller.cpp  Controller.h  EllipsoidVolumeConstraint.cpp_  EllipsoidVolumeConstraint.h_  ForceSpreadConstraint.cpp_  ForceSpreadConstraint.h_  Main.cpp  MaintainTask.cpp  MaintainTask.h  MyWindow.cpp  MyWindow.h  OrientationConstraint.h_  PositionConstraint.cpp_  PositionConstraint.h_  RollingAngle.cpp  RollingAngle.h  Task.cpp  Task.h  TorqueMagniConstraint.cpp_  TrackEETask.h  TrackEETraj.cpp  TrackOriTask.cpp  TrackOriTask.h
apps/inertiaBot/: AutomaticController.cpp  AutomaticController.h  CMakeLists.txt  CompositeController.cpp  CompositeController.h  Controller.cpp  Controller.h  Main.cpp  ManualController.cpp  ManualController.h  Motion.cpp  Motion.h  MotionRecorder.cpp  MotionRecorder.h  MyWindow.cpp  MyWindow.h  Planner.cpp  Planner.h
apps/multipleShapes/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h
apps/shadowHand/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h
apps/testImpulseDynamics/: CMakeLists.txt  Main.cpp
apps/yunfei/: CMakeLists.txt  Controller.cpp  Main.cpp  MyWindow.cpp
cmake/: FindCCD.cmake
dart/: CMakeLists.txt
data/: angular.m  angular.txt  angular_15_15h.txt
unittests/: CMakeLists.txt  TestHelpers.h  testAccuracy.cpp  testCollisionDetector.cpp  testConstraints.cpp  testDynamics.cpp  testJoints.cpp  testLCPSolver.cpp  testMath.cpp  testOpenMP.cpp  testOptimizer.cpp  testSoftDynamics.cpp
(+290 files in other folders)
